# swift

./: CMakeLists.txt
Runtimes/: Readme.md  Resync.cmake
Runtimes/Core/: CMakeLists.txt
Runtimes/Core/Concurrency/: CMakeLists.txt
Runtimes/Core/Concurrency/InternalShims/: CMakeLists.txt
Runtimes/Core/Demangling/: CMakeLists.txt
Runtimes/Core/SwiftOnoneSupport/: CMakeLists.txt
Runtimes/Core/Threading/: CMakeLists.txt
Runtimes/Core/cmake/modules/: PlatformInfo.cmake
Runtimes/Core/cmake/modules/CompilerChecks/: ptr_size
Runtimes/Core/core/: CMakeLists.txt
Runtimes/Core/runtime/: CMakeLists.txt
include/swift/: module.modulemap
include/swift/AST/: Attr.def  Attr.h  DiagnosticsFrontend.def  DiagnosticsSema.def  TBDGenRequests.h
include/swift/Basic/: Features.def  LangOptions.h
include/swift/Option/: Options.td
lib/: CMakeLists.txt
lib/AST/: ASTContext.cpp  ASTPrinter.cpp  Attr.cpp  CMakeLists.txt  Module.cpp
lib/ASTGen/: CMakeLists.txt
lib/ASTGen/Sources/ASTGen/: Macros.swift
lib/ClangImporter/: ClangImporter.cpp
lib/Frontend/: CompilerInvocation.cpp  Frontend.cpp
lib/IRGen/: IRGen.cpp  IRGenModule.cpp  IRGenModule.h
lib/Parse/: CMakeLists.txt  ParseDecl.cpp
lib/SIL/IR/: AbstractionPattern.cpp  SILFunctionType.cpp  SILPrinter.cpp  TypeLowering.cpp
lib/SILGen/: SILGen.cpp  SILGen.h  SILGenFunction.cpp
lib/Sema/: CSDiagnostics.cpp  ConstraintSystem.cpp  TypeCheckAttr.cpp  TypeCheckConcurrency.cpp  TypeCheckConcurrency.h  TypeCheckDeclOverride.cpp  TypeCheckEffects.cpp  TypeCheckStmt.cpp
lib/Serialization/: Deserialization.cpp  ModuleFormat.h  Serialization.cpp
lib/TBDGen/: TBDGenRequests.cpp  TBDGenVisitor.h
stdlib/: CMakeLists.txt  Readme.md
stdlib/cmake/modules/: AvailabilityMacros.cmake  CompilerChecks.cmake  EmitSwiftInterface.cmake  PlatformInfo.cmake  gyb.cmake
stdlib/cmake/toolchains/Apple/: ios.cmake  macos.cmake
stdlib/include/swift/Runtime/: CMakeConfig.h
stdlib/private/: CMakeLists.txt
stdlib/private/OSLog/: CMakeLists.txt
stdlib/private/RuntimeUnittest/: CMakeLists.txt
stdlib/private/StdlibUnittest/: CMakeLists.txt
stdlib/private/SwiftPrivate/: CMakeLists.txt
stdlib/private/SwiftPrivateLibcExtras/: CMakeLists.txt  Subprocess.swift
stdlib/private/SwiftPrivateThreadExtras/: CMakeLists.txt
stdlib/public/: CMakeLists.txt
stdlib/public/Backtracing/: CMakeLists.txt
stdlib/public/CommandLineSupport/: CMakeLists.txt
stdlib/public/Concurrency/: CMakeLists.txt  Task.swift
stdlib/public/Differentiation/: CMakeLists.txt
stdlib/public/Distributed/: CMakeLists.txt  LocalTestingDistributedActorSystem.swift
stdlib/public/LLVMSupport/: CMakeLists.txt
stdlib/public/Observation/Sources/Observation/: CMakeLists.txt
stdlib/public/Platform/: CMakeLists.txt
stdlib/public/Platform/cmake/: darwin.cmake
stdlib/public/StringProcessing/: CMakeLists.txt
stdlib/public/SwiftOnoneSupport/: CMakeLists.txt
stdlib/public/SwiftShims/swift/shims/: CMakeLists.txt
stdlib/public/Synchronization/: CMakeLists.txt
stdlib/public/Threading/: CMakeLists.txt
stdlib/public/core/: CMakeLists.txt
stdlib/public/runtime/: CMakeLists.txt
stdlib/public/stubs/: Availability.mm  CMakeLists.txt
stdlib/toolchain/: CMakeLists.txt
stdlib/toolchain/legacy_layouts/: CMakeLists.txt
test/ClangImporter/: objc_async.swift
test/Concurrency/: actor_call_implicitly_async.swift  actor_isolation.swift  async_computed_property.swift  unavailable_from_async.swift  where_clause_main_resolution.swift
test/Concurrency/Inputs/: UnavailableFunction.swift
test/DebugInfo/: async-args.swift
test/Driver/: loaded_module_trace_foundation.swift
test/IDE/: complete_decl_attribute.swift
test/Inputs/clang-importer-sdk/usr/include/: ObjCConcurrency.h
test/Parse/: async.swift
tools/: CMakeLists.txt
tools/SourceKit/: CMakeLists.txt
tools/SourceKit/lib/SwiftLang/: CMakeLists.txt
tools/SourceKit/tools/sourcekitd/: CMakeLists.txt
tools/SourceKit/tools/sourcekitd-test/: CMakeLists.txt
tools/SourceKit/tools/sourcekitd/lib/API/: CMakeLists.txt
tools/driver/: swift_api_digester_main.cpp
unittests/Syntax/: CMakeLists.txt
unittests/SyntaxParser/: CMakeLists.txt
utils/: build-presets.ini  build-script-impl
utils/build_swift/build_swift/: driver_arguments.py
utils/swift_build_support/swift_build_support/: host_specific_configuration.py
utils/swift_build_support/swift_build_support/products/: product.py  swiftpm.py
utils/toolchain-size/: schema.sql  toolchain-size
utils/toolchain-size/database/: __init__.py
validation-test/BuildSystem/: freestanding_cross_compile_flags.test  test_custom_toolchain.test
